# TimeTravel-Forensics

./: .gitignore  README.md  bench_ttfr_full.py  benchmark_fastlog_full.py  timetravel_benchmark.py  ttfr_research_suite.py
.github/workflows/: ci.yml
fastlog_core/: Cargo.toml
fastlog_core/src/: fastlog.rs  lib.rs  ring_buffer.rs  ringbuffer.rs  trigger.rs  utils.rs
fastlog_core/tests/: test_fastlog.rs  test_ringbuffer.rs  test_trigger.rs  test_validation.rs
python_bindings/: Cargo.toml  pyproject.toml
python_bindings/src/: lib.rs
python_bindings/tests/: smoke.py
ttfr_cli/: __init__.py  cli.py  config.py  engine.py  logger.py  main.py  recorder.py  replay.py  trigger.py  triggers.py  ttfr.py  utils.py
ttfr_fastlog/: __init__.py  init.py
