[package]
name = "fastlog_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastlog_py"
crate-type = ["cdylib"]

[dependencies]
fastlog_core = { path = "../fastlog_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4 = "1.28.1"

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module", "serde"]
