[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "fastlog-py"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
bindings = "pyo3"
module-name = "fastlog_py"
manifest-path = "Cargo.toml"
